(11/01/07)

*** Concurrent mapper now generates filenames in a relatively deep directory
    hierarchy in order to reduce the number of files in each directory.
    There is a (hard-coded) parameter which determines how many files and
    subdirectories will be permitted at each level. This parameter is set
    to 25.

(10/31/07)

*** Added an external mapper to allow invoking a script to do the
    actual mapping

(10/08/07)

*** Added readData function

(10/03/07)

*** Profile names/keys in tc.data are now case insensitive

(10/02/07)

*** Swift 0.3 release candidate 1 built from swift svn r1312, cog r1769

(09/28/07)

*** Clustering is now disabled by default.

*** Over the past week, a number of changes have been made to the logging
    output of Swift to make it richer. This is likely to break existing
    log processing code.

(09/19/07)

*** Subtle changes to the behaviour of AbstractFileMapper and its subclasses
    (primarily any of the mappers that take prefix, suffix or location
    parameters). The behaviour of prefixes and suffixes was not consistent
    between forward and reverse mapping - this has been made more consistent.
    Prefixes are now added when mapping directly as strings, rather than
    passing them through the path component mapping code first. Handling of
    separators between fields is slightly changed to accomodate this - a
    special case for the first separator is removed. Detection of the
    types of fields/indices in a path is now done using Path.Entry methods
    rather than guessing based on the first character of the field name.

*** Added lots of debug logging to AbstractFileMapper

(09/18/07)

*** Add a basic iterate {} language construct, and an @extractint function
    that can be used with it.

*** Add a @regexp language function which provides more regular expression
    functionality than is provided by @strcut. This is intended to allow
    the regular expression mapper to be removed (with uses of it replaced